# selen

./: .gitignore  .gitmodules  README.md  log.txt
assembler/: How to.docx  I_math_type.py  I_shamt_type.py  JALR_instruction.py  JAL_instruction.py  Load_type.py  R_type.py  Registers.py  SB_type.py  Service.py  Store_type.py  U_type.py  config.cfg  gg.txt  main.py
cpu/: alu.v~  cpu_top.v
doc/: ISA.docx  ISA_version_2.docx  Isa.docx  Isa_RV32I.docx  README.md  cpu_interfaces.docx  cpu_schem_2.vsd  isa.docx  selen_reference_manual.docx  ~$Isa.docx  ~$isa.docx
doc/selen/: blocks_of_core.vsd  core_check_dia.xlsx  core_data_flow.vsd  cpu_core.vsd  cpu_description.docx  cpu_schem.vsd  cpu_schem_3.vsd  hdl_description_rules.docx  isa.docx  pipline.vsd  selen.vsdx  selen_memory_map.docx  selen_reference_manual.docx  shem_of_cpu.vsd  sl_l1_cache_description.docx  ~$len_reference_manual.docx
firmware/: sl_gpio_led_on.c  sl_ram_jmp.c
firmware/sandbox/: Makefile  blink.c  blink.ld  blink.proto.ld  blink_rom.v  boot_spi_rom.v  gpio_config.h  memory_map.h  selen.ld  spi.c  spi.h  spi.s  startup.s  test.s  utils.h
rtl/: selen_top.sv
rtl/core/: Makefrag  core_alu.sv  core_alu.v  core_cpu_ctrl.v  core_csr.sv  core_csr.v  core_dec_s.sv  core_dec_s.v  core_defines.vh  core_exe_s.sv  core_exe_s.v  core_hazard_ctrl.sv  core_hazard_ctrl.v  core_if_s.v  (+23 more)
sim/: CMakeLists.txt  README.md  application.cpp  application.h  core.h  disas_main.cpp  interactive.cpp  interactive.h  main.cpp  memory.h  registers.h  sim_main.cpp  simulator.cpp  simulator.h  state.h  terminal.h  trace.h  utils.h
sim/bare_metal/: Makefile  README.md  linker.ld  linker.ld~  prog.cpp  prog.elf  run.sh  run.sh~  startup.s  temp.elf  temp.s  test.cpp~
sim/dpi/: core_model_dpi.cpp  core_model_dpi.h  test.c
sim/isa/: decode.h  definitions.h  formats.h  handlers.h  src.cpp  type_I_R.h  type_LOAD.h  type_R.h  type_SB.h  type_STORE.h  type_U.h  type_UJ.h
sim/linenoise/: linenoise.c  linenoise.h
sim/model/: core.h  defines.h  memory.h  model.h  registers.h  riscv.h  src.cpp  trace.h
sim/model/riscv/: decode.h  disassembler.h  instr_i_r.h  instr_load.h  instr_r.h  instr_sb.h  instr_store.h  instr_system.h  instr_u.h  instr_uj.h
(+327 files in other folders)
